Gave the navigation component a fixed width to avoid layout shifts

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,7 @@ html {
   flex-direction: row;
   align-items: center;
   align-self: flex-end;
+  width: 610px;
 }
 
 .navigation p {
